--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -1,12 +1,22 @@
 
 .card {
-    width: 100px;
-    height: auto;
-    margin-left: -30px;
-    transition: transform 0.15s;
-    &:hover {
-        transform: scale(2.0) translateY(-20%);
-        z-index: 1; 
-    
+    display: inline;
+    span {
+        color: black;
     }
+
+    img {
+        width: 100px;
+        height: auto;
+
+        transition: transform ease-in-out 0.2s;
+
+        &:hover {
+            //transform: scale(1) translateY(-20%);
+            z-index: 1; 
+            opacity: 0.5;
+        
+        }
+    }
+    
 }  
