--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -4,18 +4,14 @@
     span {
         color: black;
     }
-
     img {
         width: 100px;
         height: auto;
-
         transition: transform ease-in-out 0.2s;
-
         &:hover {
-            //transform: scale(1) translateY(-20%);
+            //transform: scale(1.2) ;
             z-index: 1; 
-            opacity: 0.5;
-        
+            opacity: 0.9;
         }
     }
     
