--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,8 +1,10 @@
 .app {
-   user-select: none;
+  user-select: none;
   text-size-adjust: none;
   font-family: helvetica, arial, sans-serif;
   line-height: 200%;
   padding: 6px 20px 30px;
   color: pink;
+
+  height:500px;
 }
