--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,19 +1,30 @@
-
 .card {
-    display: inline;
-   
-    span {
-        color: black;
-    }
+    
+    display:inline-block;
+    color:black;
+            -webkit-user-drag: none; 
     img {
         width: 100px;
         height: auto;
-        transition: transform ease-in-out 0.2s;
-        &:hover {
-            //transform: scale(1.2) ;
+
+    }  
+    span {
+        font-family: "Belwe";
+        font-weight: bold;
+        font-size:20px;
+        position:relative;
+        color:white;
+        -webkit-text-stroke-width: 0.5px;
+        -webkit-text-stroke-color: black;
+    }
+            &:hover {
+                 transition: transform ease-in-out 0.2s;
+            transform: scale(1.2);
             z-index: 1; 
             opacity: 0.9;
         }
-    }
-    
-}  
+}
+.attack {
+    top: -115px;
+    left: 22px;
+}
