--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -16,10 +16,10 @@
         color:white;
         -webkit-text-stroke-width: 0.5px;
         -webkit-text-stroke-color: black;
-    }
-            &:hover {
-                 transition: transform ease-in-out 0.2s;
-            transform: scale(1.2);
+        }
+        &:hover {
+            transition: transform ease-in-out 0.2s;
+            //transform: scale(1.2);
             z-index: 1; 
             opacity: 0.9;
         }
