--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,3 +1,4 @@
+
 .card {
     
     display:inline-block;
@@ -11,7 +12,7 @@
     span {
         font-family: "Belwe";
         font-weight: bold;
-        font-size:20px;
+        font-size:22px;
         position:relative;
         color:white;
         -webkit-text-stroke-width: 0.5px;
@@ -19,12 +20,12 @@
         }
         &:hover {
             transition: transform ease-in-out 0.2s;
-            //transform: scale(1.2);
+            transform: scale(1.55);
             z-index: 1; 
             opacity: 0.9;
         }
 }
 .attack {
-    top: -115px;
+    top: -116px;
     left: 22px;
 }
