working draggable cards to playing board

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -1,8 +1,11 @@
 .board {
-    display: inline   
+
+    display: flex;   
+    height:200px;
     span {
         color: black;
     }
-    border: 2px black solid
+    border: 2px black solid;
+
     
 }  
