--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,6 +5,8 @@
   line-height: 200%;
   padding: 6px 20px 30px;
   color: pink;
-
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
   height:500px;
 }
