--- a/src/components/Minion/Minion.scss
+++ b/src/components/Minion/Minion.scss
@@ -1,6 +1,6 @@
 
 .minion {
-    display: inline;
+
    
     span {
         color: black;
@@ -13,6 +13,11 @@
 
             z-index: 1; 
         }
+            display: inline;
+      -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
     }
     
 }  
