added draggable attack from minion to minion

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -1,14 +1,6 @@
 .board {
-
-    ul {
-    -webkit-margin-before: 0px;
-    -webkit-margin-after: 0px;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-    -webkit-padding-start: 0px;
-    }
-
     border: 2px black solid;
+    min-height:50%;
 }  
 
 .enter {
