--- a/src/components/Minion/Minion.scss
+++ b/src/components/Minion/Minion.scss
@@ -1,14 +1,18 @@
 
 .minion {
     display:inline-block;
-   
+
+
     span {
         color: black;
     }
+    margin: 0px;
+    transition: margin 0.1s ease-in-out,width 0.2s ease-in-out;
     img {
-        width: 75px;
-        height: auto;
-        transition: transform ease-in-out 0.2s;
+        transition: width 0.1s ease-in-out;
+        width: 80px;
+        height: 115px;
+
         &:hover {
 
             z-index: 1; 
@@ -16,3 +20,12 @@
     }
     
 }  
+
+.minion-drag {
+    opacity : 0;
+    margin : -40px;
+    img {
+        width : 80px;
+    }
+
+}
