--- a/src/components/Minion/Minion.scss
+++ b/src/components/Minion/Minion.scss
@@ -1,31 +1,20 @@
 
 .minion {
     display:inline-block;
-
-
     span {
         color: black;
     }
     margin: 0px;
     transition: margin 0.1s ease-in-out,width 0.2s ease-in-out;
+    max-width: 100px;
+    max-height: auto;
     img {
-        transition: width 0.1s ease-in-out;
-        width: 80px;
-        height: 115px;
-
-        &:hover {
-
-            z-index: 1; 
-        }
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
     }
-    
 }  
-
 .minion-drag {
     opacity : 0;
-    margin : -40px;
-    img {
-        width : 80px;
-    }
-
+    margin : -50px;
 }
