--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -5,7 +5,7 @@
     color:black;
     max-width: 100px;
     max-height: auto;
-    transition: margin 1s ease-in-out,width 0.2s ease-in-out;
+    transition: margin 0.2s ease-in-out,width 0.2s ease-in-out;
     img {
         width: 100%;
         height: 100%;
@@ -14,8 +14,12 @@
 }
 
 .card-drag {
-    opacity: 1;
+    opacity: 0;
     margin: -50px;
+}
+
+.card-disable-drag {
+    transition: none !important;
 }
 
 .mana {
