--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,52 +1,49 @@
 
 .card {
-    position:inline-block;
+    position: relative;
     display:inline-block;
     color:black;
     max-width: 100px;
     max-height: auto;
-    transition: margin 0.2s ease-in-out,width 0.2s ease-in-out;
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }  
+    transition: margin 0.2s ease-in-out;
 }
+
+.bg {
+    width: 100%;
+    height: 100%;
+
+}  
 
 .card-drag {
     opacity: 0;
     margin: -50px;
-}
 
-.card-disable-drag {
-    transition: none !important;
 }
-
 .mana {
-    
     top: -116px;
     left: 22px;
 }
-
 
 .attack {
     position:absolute;
     img{
 
-        width:30px;
+        width:100%;
         height:auto;
-        top: -2px;
-        left: -12px;
+        top: 0px;
+        left: 0px;
         &:hover {
             transition: transform ease-in-out 0.2s;
-            //transform: scale(1.55);
+            transform: scale(1.55);
             z-index: 1; 
             opacity: 0.9;
         }
         
     }
-    top: -10px;
-    left: -89px;
+    width:30px;
+    height: auto;
+    top: 0px;
+    left: 0px;
 }
 .value {
      position:absolute;
