--- a/src/components/Minion/Minion.scss
+++ b/src/components/Minion/Minion.scss
@@ -1,20 +1,70 @@
 
 .minion {
+    color: white;
+    font-family: 'belwe';
+    font-size: 23px;
+
+    position: relative;
     display:inline-block;
-    span {
-        color: black;
-    }
-    margin: 0px;
-    transition: margin 0.1s ease-in-out,width 0.2s ease-in-out;
     max-width: 100px;
     max-height: auto;
+
+    box-sizing: border-box;
+    div {
+        position:absolute;
+        height: auto;
+        span {
+            position:absolute;
+            z-index :2;
+            -webkit-text-stroke: 1px black;
+        }
+    }
     img {
-        object-fit: cover;
         width: 100%;
-        height: 100%;
+        height: 100%;  
+
     }
 }  
+
 .minion-drag {
     opacity : 0;
-    margin : -50px;
+}
+
+.minion-can-drop { 
+  //box-shadow: 0 0 5px red;
+  //border: 2px solid red;
+  transform: scale(.8);
+}
+
+.attack {
+    span {
+        top: 2px;
+        left: 12px;
+    }
+    width:30px;
+    top: 108px;
+    left: -1px; 
+}
+
+.health {
+    span {
+        top: 2px;
+        left: 8px;
+    }
+    width:25px;
+    top: 109px;
+    left: 74px;
+}
+.gem {
+
+    span {
+        top: -4px;
+        left: 7px;
+    }
+
+    width:25px;
+    top: 7px;
+    left: 3px; 
+ 
+  
 }
