--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,12 +1,32 @@
 
 .card {
+    color: white;
+    font-family: 'belwe';
+    font-size: 23px;
+
     position: relative;
     display:inline-block;
-    color:black;
     max-width: 100px;
     max-height: auto;
+
+    box-sizing: border-box;
+    div {
+        position:absolute;
+        height: auto;
+        span {
+            position:absolute;
+            z-index :2;
+            -webkit-text-stroke: 1px black;
+        }
+    }
+    img {
+        width: 100%;
+        height: 100%;  
+
+    }
     transition: margin 0.2s ease-in-out;
 }
+
 
 .bg {
     width: 100%;
@@ -19,9 +39,18 @@
     margin: -50px;
 
 }
-.mana {
-    top: -116px;
-    left: 22px;
+.gem {
+
+    span {
+        top: -4px;
+        left: 7px;
+    }
+
+    width:25px;
+    top: 7px;
+    left: 3px; 
+ 
+  
 }
 
 .attack {
