gems and mana. selectors for gems,  remove card

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,10 +1,10 @@
 .app {
 
-  font-family: helvetica, arial, sans-serif;
-  line-height: 200%;
+  font-family: 'belwe';
+  font-size: 23px;
+  //line-height: 200%;
   padding: 6px 20px 30px;
-  color: pink;
   user-select: none;
   height:500px;
-  
+  cursor: grab;
 }
