--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -1,17 +1,16 @@
 
 .player {
-    color: white;
+    color: red;
     font-family: 'belwe';
     font-size: 23px;
 
     position: relative;
-    display:inline-block;
+
     max-width: 100px;
     max-height: auto;
 
     box-sizing: border-box;
     div {
-        position:absolute;
         height: auto;
         span {
             position:absolute;
@@ -22,49 +21,7 @@
     img {
         width: 100%;
         height: 100%;  
-
     }
+
+    width:25px;
 }  
-
-.minion-drag {
-    opacity : 0;
-}
-
-.minion-can-drop { 
-  //box-shadow: 0 0 5px red;
-  //border: 2px solid red;
-  transform: scale(.8);
-}
-
-.attack {
-    span {
-        top: 2px;
-        left: 12px;
-    }
-    width:30px;
-    top: 108px;
-    left: -1px; 
-}
-
-.health {
-    span {
-        top: 2px;
-        left: 8px;
-    }
-    width:25px;
-    top: 109px;
-    left: 74px;
-}
-.gem {
-
-    span {
-        top: -4px;
-        left: 7px;
-    }
-
-    width:25px;
-    top: 7px;
-    left: 3px; 
- 
-  
-}
