minion is destroyed when health is 0

--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -16,6 +16,8 @@
             position:absolute;
             z-index :2;
             -webkit-text-stroke: 1px black;
+            text-align: center;
+
         }
     }
     img {
