--- a/src/components/Site/Body/Body.scss
+++ b/src/components/Site/Body/Body.scss
@@ -1,24 +1,9 @@
 .body {
-  background-color:#f0f0f0;
+    display: flex;
+    flex-direction: row;
   flex:1;
-  padding: 5px;
-}
 
-.tilerow {
-    flex:1;
-  display: flex;
-  flex-direction: row;
-}
-
-.tilecolumn {
-  flex:1;
-  display: flex;
-  flex-direction: column;
-}
-
-.tileextended {
-   flex:1;
-   .tile {
-     height:500px;
-   }
+  > * {
+    padding: 50px;
+  }
 }
