--- a/src/components/Site/Sidebar/Sidebar.scss
+++ b/src/components/Site/Sidebar/Sidebar.scss
@@ -1,35 +1,34 @@
 
 .sidebar {  
-    background-color:#2e3e4e;
-    color:white;
-    font-size: 13px;
-    padding:5px;
+    color:#018e6b;
+    font-size: 15px;
     box-sizing: border-box;
-    width:150px;
+    //width:150px;
     flex-direction: column; 
-    overflow-y: auto;
-    
+    text-transform:uppercase ; 
+    table {
+        border-collapse: collapse;
+    }
+ 
 }  
-
 .links {
     flex:1;
-    ul {
-            list-style-type: none;
-            padding: 0;
-            li {
-                a {
-                    color:#c8c8c8;
-                    text-decoration: none;
-                    &:hover{
-                        color:white;
-                    }
+    tr {
+        list-style-type: none;
+        padding: 0;
+        td {
+            a {
+                color:#018e6b;;
+                text-decoration: none;
+                &:hover{
+                    color:grey;
                 }
             }
         }
+    }
 }
 
 
 .bullet {
     padding:15px;
-    padding-right : 20px;
 }
